# mlflow-eval-codex

./: .env.example  .gitignore  README.md  batch_cases.jsonl  batch_results.json  batch_run.py  batch_run_eval.py  batch_run_eval_core.py  eval.py  eval_config.yaml  eval_config.yaml.example  ingest_selected_sessions_to_run.ipynb  pyproject.toml
codex_session_ingest/: __init__.py  cli.py  ingest.py
mlflow_codex/: __init__.py  api.py  cli.py  config.py  tracing.py
